# homecloud-cli

./: .gitignore  .gitmodules  README.md  homecloud.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DISTRIBUTION.md  GITHUB_SECRETS.md  SMOKE_TEST.md
homecloud_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py  prompts.py  signing.py  so_progress.py  transfer_progress.py
homecloud_core/: context.py  defaults.py  mfa.py  transport.py
homecloud_sdk/: client.py  services.py
install/: install.ps1  install.sh
scripts/: build-binary.ps1  build-binary.sh  pyinstaller_entry.py  run-smoke-homelab.sh  sanity-install.sh  smoke-e2e.py  upload-release.sh
tests/: test_cli.py  test_config.py  test_signing.py  test_so_paths.py
