[project]
name = "homecloud-cli"
version = "0.2.18"
description = "HomeCloud command-line interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
build = [
    "pyinstaller>=6.11.0",
]

[project.scripts]
homecloud = "homecloud_cli.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["homecloud_cli*", "homecloud_core*", "homecloud_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
