[project]
name = "homecloud-cli"
version = "0.2.26"
description = "HomeCloud command-line interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "homecloud-sdk>=0.5.1",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "questionary>=2.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
build = [
    "pyinstaller>=6.11.0",
]

[project.scripts]
homecloud = "homecloud_cli.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["homecloud_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
